--- a/.gitignore
+++ b/.gitignore
@@ -132,3 +132,6 @@ dmypy.json
 token.txt
 8.http.requests/token_yandex.txt
 vk.txt
+Course/111111api_services.py
+Course/main1.py
+Course/vk_save.py
